--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-apollo": "^3.0.0",
+    "react-apollo-hooks": "^0.5.0",
+    "react-dom": "^16.8.6",
+    "react-native": "0.60.4",
+    "react-native-draggable-flatlist": "^1.1.7",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-swiper": "^1.5.14",
+    "styled-components": "^4.3.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
