--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.0",
     "@react-native-community/async-storage": "^1.6.1",
+    "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "graphql": "^14.4.2",
@@ -22,8 +24,6 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-swipeable": "^0.6.0",
-    "react-native-swipeout": "^2.3.6",
-    "react-native-swiper": "^1.5.14",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.2"
   },
