--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
+    "apollo-link-http": "^1.5.16",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "react": "16.8.6",
